5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1789_1601.log
== TEST (2019-05-29 18:06:47) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
cont=0
crescente=arange(size(t_chegada))
print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:09:09) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
cont=0
crescente=arange(size(t_chegada))
maximo=max(t_chegada)
while(!=)

print(maximo)
-- ERROR:
File "XXXX", line 6
    while(!=)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:09:19) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
cont=0
crescente=arange(size(t_chegada))
maximo=max(t_chegada)


print(maximo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:13:24) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=minimo
while(cont!=minimo):
	crescente=crescente+1
print(crescente)
-- EXECUTION TIME:
0.606364
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[0 1 2 3]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[0 1 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:15:18) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
while(t_chegada[cont]!=minimo):
	crescente=crescente+1
	cont=cont+1
print(crescente)

-- EXECUTION TIME:
0.51662
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[3 4 5 6]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[2 3 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:15:25) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
while(t_chegada[cont]!=minimo):
	crescente=crescente+1
	cont=cont+1
print(crescente)

-- EXECUTION TIME:
0.813164
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[3 4 5 6]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[2 3 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:15:26) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
while(t_chegada[cont]!=minimo):
	crescente=crescente+1
	cont=cont+1
print(crescente)

-- EXECUTION TIME:
0.718797
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[3 4 5 6]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[2 3 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:17:14) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
while(t_chegada[cont]!=minimo):
	crescente[cont]=crescente+1
	cont=cont+1
print(crescente)

-- EXECUTION TIME:
0.523163
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1601/main.py", line 7, in <module>
    crescente[cont]=crescente+1
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:18:10) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
con=0
while(t_chegada[cont]!=minimo):
	crescente[con]=crescente
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.376241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1601/main.py", line 8, in <module>
    crescente[con]=crescente
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:19:04) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
con=0
while(t_chegada[cont]!=minimo):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.472553
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[1 2 3 3]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:19:18) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
con=0
while(t_chegada[cont]!=minimo):
	crescente=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.476425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1601/main.py", line 8, in <module>
    crescente=crescente[con]+1
IndexError: invalid index to scalar variable.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:04) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
minimo=min(t_chegada)
cont=0
con=0

while(t_chegada[cont]!=minimo):
	crescente=crescente[con]+1
	cont=cont+1
	con=con+1
print(t_chegada)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:54) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
cont=0
con=0

while(t_chegada[cont]!=min(t_chegada)):
	crescente=crescente[con]+1
	cont=cont+1
	con=con+1
print(t_chegada)

-- ERROR:
File "XXXX", line 4
    cont=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:15) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente=crescente[con]+1
	cont=cont+1
	con=con+1
print(t_chegada)

-- ERROR:
File "XXXX", line 4
    cont=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:27:00) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(t_chegada)

-- EXECUTION TIME:
0.303489
-- ERROR:
  File "/home/codebench/codes/1789/1601/main.py", line 4
    cont=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:27:27) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.144598
-- ERROR:
  File "/home/codebench/codes/1789/1601/main.py", line 4
    cont=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:28:09) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente[con])

-- EXECUTION TIME:
0.145995
-- ERROR:
  File "/home/codebench/codes/1789/1601/main.py", line 4
    cont=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:35) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
con=1



print(crescente[con])

-- ERROR:
File "XXXX", line 4
    con=1
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:06) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)
con=1



print(crescente)

-- ERROR:
File "XXXX", line 4
    con=1
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:29:21) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)

print(crescente)

-- EXECUTION TIME:
0.130549
-- ERROR:
  File "/home/codebench/codes/1789/1601/main.py", line 5
    print(crescente)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:23) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)

print(crescente)

-- ERROR:
File "XXXX", line 5
    print(crescente)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:38) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada)

print(crescente)
-- ERROR:
File "XXXX", line 5
    print(crescente)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:50) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))

print(crescente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:03) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
con=1



print(crescente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:29) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
con=1



print(crescente[con])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:29) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:31:32) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.548709
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1601/main.py", line 8, in <module>
    crescente[con]=crescente[con]+1
NameError: name 'con' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:31:48) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0
con=0


while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.507909
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[1 2 3 3]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:33:01) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0
con=0
while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con+1]
	cont=cont+1
	con=con+1
print(crescente)

-- EXECUTION TIME:
0.471274
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
[1 2 3 3]
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
[0 1 2 3]
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
[1 2 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:31) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0
con=0
while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con+1]
	cont=cont+1
	con=con+1
print(crescente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:04) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0
con=0
while(t_chegada[cont]!=min(t_chegada)):
	crescente[con]=crescente[con]+1
	cont=cont+1
	con=con+1
print(crescente)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:35:45) 
-- CODE:
from numpy import*
t_chegada=array(eval(input("tempo: ")))
crescente=arange(size(t_chegada))
cont=0
con=0
while(t_chegada[cont]!=min(t_chegada)):
	cont=cont+1
print(crescente[cont])

-- EXECUTION TIME:
0.466265
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
